2006-04-09 Niklas Knutsson  <nq@altern.org>

	* Ignore definition names beginning with colon, for plural names where the original name does not differ
	* Set vectors and matrices as the first argument by default
	* Add more function descriptions

2006-04-08 Niklas Knutsson  <nq@altern.org>

	* Options to use dot as thousands separator when it is not the default decimal sign
	* require_translation property for definitions, used in the large numbers category

2006-04-06 Niklas Knutsson  <nq@altern.org>

	* Update RPN functions
	* Update API documentation
	* Change usecs argument to msecs

2006-04-04 Niklas Knutsson  <nq@altern.org>

	* Plugins
	* True RPN mode

2006-04-03 Niklas Knutsson  <nq@altern.org>

	* Set min and max in argument definition for zeta()
	* Set exact value for zeta with argument 2, 4, 6, 8 or 10 and set infinity for 1

2006-04-02 Niklas Knutsson  <nq@altern.org>

	* Symmetric matrix => Square matrix
	* Some text string changes
	* Accept vectors in elements function

2006-04-01 Niklas Knutsson  <nq@altern.org>

	* Interpret 0x..., 0o... and 0b... as hexadecimal, octal and binary numbers, respectively, when base is decimal

2006-03-29 Niklas Knutsson  <nq@altern.org>

	* Remove deleted data set from the data set list, not only the function list (fix crash on delete and update list view)

2006-03-28 Niklas Knutsson  <nq@altern.org>

	* Fix contains... functions (and thereby integration)

2006-03-25 Niklas Knutsson  <nq@altern.org>

	* Ignore commas in numbers
	* Start API documentation

2006-03-13 Niklas Knutsson  <nq@altern.org>

	* Approximate comparison fixes
	* Add PrintOptions->restrict_to_parent_precision (default true)
	* Do not produce a result with multiplications inside multiplications (fixes prefixes with simplification)

2006-02-26 Niklas Knutsson  <nq@altern.org>

	* Approximate comparison
	* Avoid floating point overflow and underflow by not lowering precision in comparison
	  and always using long floats