@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<QALCULATE version="0.9.3">
+<QALCULATE version="0.9.4">
   <object symbol="H" number="1">
     <_name>Hydrogen</_name>
     <class>8</class>
