@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<QALCULATE version="0.9.3">
+<QALCULATE version="0.9.4">
   <prefix type="decimal">
     <name>yocto</name>
     <abbreviation>y</abbreviation>
