@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<QALCULATE version="0.9.3">
+<QALCULATE version="0.9.4">
   <category>
     <_title>Length</_title>
     <unit type="base">
